test/corpus/gdrive.txt
==================
Google Drive example
==================

model
  schema 1.1

type user

type group
  relations
    define member: [user]

type folder
  relations
    define can_create_file: owner
    define owner: [user]
    define parent: [folder]
    define viewer: [user, user:*, group#member] or owner or viewer from parent

type doc
  relations
    define can_change_owner: owner
    define can_read: viewer or owner or viewer from parent
    define can_share: owner or owner from parent
    define can_write: owner or owner from parent
    define owner: [user]
    define parent: [folder]
    define viewer: [user, user:*, group#member]

---

(source_file
  (model)
  (schema
    (version))
  (type_declaration
    (extended_identifier))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (extended_identifier)))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (binary_relation
                (relation_def
                  (direct_relationship
                    (direct_relationship_item
                      (extended_identifier))
                    (direct_relationship_item
                      (all))
                    (direct_relationship_item
                      (relation_ref))))
                (operator)
                (relation_def
                  (extended_identifier))))
            (operator)
            (relation_def
              (indirect_relation
                (extended_identifier)
                (extended_identifier))))))))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (extended_identifier)))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (binary_relation
                (relation_def
                  (extended_identifier))
                (operator)
                (relation_def
                  (extended_identifier))))
            (operator)
            (relation_def
              (indirect_relation
                (extended_identifier)
                (extended_identifier))))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (extended_identifier))
            (operator)
            (relation_def
              (indirect_relation
                (extended_identifier)
                (extended_identifier))))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (extended_identifier))
            (operator)
            (relation_def
              (indirect_relation
                (extended_identifier)
                (extended_identifier))))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier))
            (direct_relationship_item
              (all))
            (direct_relationship_item
              (relation_ref))))))))
