test/corpus/github.txt
==================
GitHub example
==================

model
  schema 1.1

type user

type team
  relations
    define member: [user, team#member]

type repo
  relations
    define admin: [user, team#member] or repo_admin from owner
    define maintainer: [user, team#member] or admin
    define owner: [organization]
    define reader: [user, team#member] or triager or repo_reader from owner
    define triager: [user, team#member] or writer
    define writer: [user, team#member] or maintainer or repo_writer from owner

type organization
  relations
    define member: [user] or owner
    define owner: [user]
    define repo_admin: [user, organization#member]
    define repo_reader: [user, organization#member]
    define repo_writer: [user, organization#member]

---

(source_file
  (model)
  (schema
    (version))
  (type_declaration
    (extended_identifier))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier))
            (direct_relationship_item
              (relation_ref)))))))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (direct_relationship
                (direct_relationship_item
                  (extended_identifier))
                (direct_relationship_item
                  (relation_ref))))
            (operator)
            (relation_def
              (indirect_relation
                (extended_identifier)
                (extended_identifier))))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (direct_relationship
                (direct_relationship_item
                  (extended_identifier))
                (direct_relationship_item
                  (relation_ref))))
            (operator)
            (relation_def
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (binary_relation
                (relation_def
                  (direct_relationship
                    (direct_relationship_item
                      (extended_identifier))
                    (direct_relationship_item
                      (relation_ref))))
                (operator)
                (relation_def
                  (extended_identifier))))
            (operator)
            (relation_def
              (indirect_relation
                (extended_identifier)
                (extended_identifier))))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (direct_relationship
                (direct_relationship_item
                  (extended_identifier))
                (direct_relationship_item
                  (relation_ref))))
            (operator)
            (relation_def
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (binary_relation
                (relation_def
                  (direct_relationship
                    (direct_relationship_item
                      (extended_identifier))
                    (direct_relationship_item
                      (relation_ref))))
                (operator)
                (relation_def
                  (extended_identifier))))
            (operator)
            (relation_def
              (indirect_relation
                (extended_identifier)
                (extended_identifier))))))))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (direct_relationship
                (direct_relationship_item
                  (extended_identifier))))
            (operator)
            (relation_def
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier))
            (direct_relationship_item
              (relation_ref)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier))
            (direct_relationship_item
              (relation_ref)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier))
            (direct_relationship_item
              (relation_ref))))))))
