test/corpus/ip_based_access.txt
==================
IP-based access example
==================

model
	schema 1.1

type user

type organization
relations
  define member : [user]
  define ip_based_access_policy : [organization#member with in_company_network]

type document
relations
  define organization : [organization]      
  define viewer: [user]
  define can_view: viewer and ip_based_access_policy from organization

condition in_company_network(user_ip: ipaddress, cidr: string) {
  user_ip.in_cidr(cidr)
}

---

(source_file
  (model)
  (schema
    (version))
  (type_declaration
    (extended_identifier))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (relation_ref)
              (conditional
                (identifier))))))))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (extended_identifier))
            (operator)
            (relation_def
              (indirect_relation
                (extended_identifier)
                (extended_identifier))))))))
  (condition_declaration
    (identifier)
    (param
      (identifier)
      (type_identifier
        (simple_type_identifier)))
    (param
      (identifier)
      (type_identifier
        (simple_type_identifier)))
    (condition_body
      (identifier)
      (identifier)
      (parenthesized_condition
        (identifier)))))
