test/corpus/module.txt
==================
Module
==================

module test

extend type user
  relations
    define example: test

---

(source_file
  (module
    (identifier))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (extended_identifier))))))
