test/corpus/temporal_access.txt
==================
Temporal access example
==================

model
  schema 1.1

type user

type document
  relations
    define viewer: [user, user with non_expired_grant]

condition non_expired_grant(current_time: timestamp, grant_time: timestamp, grant_duration: duration) {
  current_time < grant_time + grant_duration
}

---

(source_file
  (model)
  (schema
    (version))
  (type_declaration
    (extended_identifier))
  (type_declaration
    (extended_identifier)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier))
            (direct_relationship_item
              (extended_identifier)
              (conditional
                (identifier))))))))
  (condition_declaration
    (identifier)
    (param
      (identifier)
      (type_identifier
        (simple_type_identifier)))
    (param
      (identifier)
      (type_identifier
        (simple_type_identifier)))
    (param
      (identifier)
      (type_identifier
        (simple_type_identifier)))
    (condition_body
      (identifier)
      (condition_operator)
      (identifier)
      (condition_operator)
      (identifier))))
