test/corpus/test.txt
==================
Basics
==================

model
  schema 1.2

type merchant # module: core, file: core.module.fga
  relations
    define accountant: [user]
    define admin: [user] or owner
    define with-dash: [user]

---

(source_file
  (model)
  (schema
    (version))
  (type_declaration
    (extended_identifier)
    (comment)
    (relations
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (binary_relation
            (relation_def
              (direct_relationship
                (direct_relationship_item
                  (extended_identifier))))
            (operator)
            (relation_def
              (extended_identifier)))))
      (definition
        (extended_identifier)
        (relation_def
          (direct_relationship
            (direct_relationship_item
              (extended_identifier))))))))
